@startuml

title __COMMANDS's Class Diagram__\n

  namespace academy.mindswap {
    namespace game {
      namespace commands {
        class academy.mindswap.game.commands.BankruptHandler {
            + execute()
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace game {
      namespace commands {
        enum Command {
          BANKRUPT
          FIFTY
          FIVE_HUNDRED
          FREE_PLAY
          MISS_TURN
          ONE_HUNDRED
          ONE_THOUSAND
          THREE_HUNDRED
          description
          handler
          isPenalty
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace game {
      namespace commands {
        interface academy.mindswap.game.commands.CommandHandler {
            {abstract} + execute()
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace game {
      namespace commands {
        class academy.mindswap.game.commands.FreePlayHandler {
            + execute()
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace game {
      namespace commands {
        class academy.mindswap.game.commands.MissTurnHandler {
            + execute()
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace game {
      namespace commands {
        class academy.mindswap.game.commands.MoneyHandler {
            - bonus : int
            + MoneyHandler()
            + execute()
            - consonantFlow()
            - getMessageFromBuffer()
            - getPlayerAnswer()
            - guessQuoteFlow()
            - playerGuessedLetter()
            - validateAnswer()
            - vowelFlow()
        }
      }
    }
  }
  

  academy.mindswap.game.commands.BankruptHandler .up.|> academy.mindswap.game.commands.CommandHandler
  academy.mindswap.game.commands.Command o-- academy.mindswap.game.commands.CommandHandler : handler
  academy.mindswap.game.commands.FreePlayHandler .up.|> academy.mindswap.game.commands.CommandHandler
  academy.mindswap.game.commands.FreePlayHandler o-- academy.mindswap.game.commands.CommandHandler : MoneyHandler
  academy.mindswap.game.commands.MissTurnHandler .up.|> academy.mindswap.game.commands.CommandHandler
  academy.mindswap.game.commands.MoneyHandler .up.|> academy.mindswap.game.commands.CommandHandler
  academy.mindswap.game.commands.MoneyHandler o-- academy.mindswap.game.Game : game
  academy.mindswap.game.commands.MoneyHandler o-- academy.mindswap.game.Game.PlayerHandler : playerHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
